--- a/templates/index.html
+++ b/templates/index.html
@@ -98,15 +98,15 @@
                 <img src="../static/assets/img/imagendecontacto1.jpg" alt="">
                 <div class="location-info"></div>
                 <h2 style="color: rgb(204, 204, 20);">Cuapiaxtla</h2><br>
-                <p style="color: rgb(208, 208, 137);">Direccion</p>
-                <p style="color: rgb(208, 208, 137);">Telefono</p>
+                <p style="color: rgb(208, 208, 137);">Direccion:  Cuapiaxtla, Tlaxcala , San Lorenzo Cuapiaxtla, Mexico, 90569</p>
+                <p style="color: rgb(208, 208, 137);">Número de Telefono:   2471065691</p>
             </div>
             <div class="location-item">
                 <img src="../static/assets/img/imagendecontacto2.jpg" alt="">
                 <div class="location-info"></div>
                 <h2 style="color: rgb(204, 204, 20);">Huamantla</h2><br>
-                <p style="color: rgb(208, 208, 137);">Direccion</p>
-                <p style="color: rgb(208, 208, 137);">Telefono</p>
+                <p style="color: rgb(208, 208, 137);">Direccion: Calle Juarez Norte #102 Col. Centro </p>
+                <p style="color: rgb(208, 208, 137);">Número de Telefono:   2471065691</p>
             </div>
         </section>
         <section class="contact-form">
