--- a/templates/editarUsuario.html
+++ b/templates/editarUsuario.html
@@ -4,78 +4,121 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editar usuario</title>
-    <link rel="stylesheet" href="../static/style/consulta_general.css">
-    <link rel="stylesheet" href="../static/style/assets/font/flaticon.css">
-    <link rel="stylesheet" href="../static/style/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../static/editar.css">
-    <!-- Modales -->
+    <link rel="stylesheet" href="../static/registrar.CSS">
+    <link rel="stylesheet" href="../static/assets/font/flaticon.css">
+    <link rel="stylesheet" href="../static/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
+<header>
+    <section class="incons-container">
+        <!-- Aqui van  los iconos de las redes sociales, eslogan, correo y horarios -->
+        <div class="incons">
+            <a href="/"><span class="flaticon-001-facebook"></span></a>
+            <a href="/"><span class="flaticon-003-whatsapp"></span></a>
+            <a href="/"><span class="flaticon-011-instagram"></span></a>
+        </div>
+        <div class="inf-p">
+            <p>Más que una tienda, un universo de posibilidades...</p>
+        </div>
+        <div class="correo-a">
+            <a href="Gladiators99zxc@gmail.com">Gladiators99zxc@gmail.com</a>
+        </div>
+        <div class="inf-p">
+            <p>Lun-Vie 10:00a.m--8:00p.m
+            Sab-Dom 9:00a.m--9:00p.m</p>
+        </div>
+    </section>
+    <nav>
+        <!-- Aqui va el logo y nombre de la tienda y el nombre de las secciones -->
+        <section class="logo-gladiators">
+            <a href="index.html"><img src="../static/assets/img/Logotipo_GladiatorsTransparente.png"alt="imagen-logo"></a>
+            <h5>Gladiator's</h5>
+        </section>
+        <section>
+            <ul class="menu secciones">
+                <li><a href="{{ url_for('secciones') }}">Inicio</a></li>
+
+                <li><a href="registrar_venta">Ventas</a></li>
+
+                <li><a href="{{ url_for('productos') }}">Productos</a>
+                <ul>
+                    <li class="secciones"><a href="registrar_producto">Registrar</a></li>
+                    <li class="secciones"><a href="consultar_productos">Consultar</a></li>
+                </ul>
+                </li>
+                {% if rol == 1 %}
+                <li><a href="./pages/index.html">Usuarios</a>
+                <ul>
+                    <li class="secciones"><a href="registrar_usuario">Registrar</a></li>
+                    <li class="secciones"><a href="consultar_usuarios">Consultar</a></li>
+                </ul>
+
+                </li>
+                {% endif %}
+                <li><a href="{{ url_for('index') }}">Soporte</a></li>
+                <li><a href="{{ url_for('index') }}">Cerrar Sesión</a></li>
+            </ul>
+        </section>
+    </nav>
+</header>
 <body>
-    <div class="container">
-        <h2 class="my-4">Edición de nombre del usuario</h2>
-        <form id="myform" action="{{ url_for('update_usuario_post', id_usuario=datos[0]) }}" method="POST" enctype="multipart/form-data">
-            <div class="form-row">
-                <div class="form-group col-md-6">
-                    <label for="nombre">Nombre:</label>
-                    <input type="text" class="form-control" id="nombre" name="nombre" value="{{ datos[1] }}" required>
-                </div>
-                <div class="form-group col-md-6">
-                    <label for="apellido_paterno">Apellido Paterno:</label>
-                    <input type="text" class="form-control" id="apellido_paterno" name="apellido_paterno" value="{{ datos[2] }}" required>
-                </div>
-                <div class="form-group col-md-6">
-                    <label for="apellido_materno">Apellido Materno:</label>
-                    <input type="text" class="form-control" id="apellido_materno" name="apellido_materno" value="{{ datos[3] }}" required>
-                </div>
-                <div class="form-group col-md-6">
-                    <label for="domicilio">Domicilio:</label>
-                    <input type="text" class="form-control" id="domicilio" name="domicilio" value="{{ datos[4] }}" required>
-                </div>
-                <div class="form-group col-md-6">
-                    <label for="numero_telefonico">Número telefónico:</label>
-                    <input type="text" class="form-control" id="numero_telefonico" name="numero_telefonico" value="{{ datos[5] }}" required>
-                </div>
-                <div class="form-group col-md-6">
-                    <label for="curp">CURP:</label>
-                    <input type="text" class="form-control" id="curp" name="curp" value="{{ datos[6] }}" required>
-                </div>
-                <div class="form-group col-md-6">
-                    <label for="correo_electronico">Correo electrónico:</label>
-                    <input type="email" class="form-control" id="correo_electronico" name="correo_electronico" value="{{ datos[11] }}" required>
-                </div>
-                <div class="form-group col-md-6">
-                    <label for="tipos_de_usuario">Tipo de usuario:</label>
-                    <select class="form-control" name="tipos_de_usuario" id="tipos_de_usuario">
-                        <option value="cajero" {% if datos[8] == 'cajero' %}selected{% endif %}>Cajero</option>
-                        <option value="administrador" {% if datos[8] == 'administrador' %}selected{% endif %}>Administrador</option>
-                    </select>
-                </div>
-                <div class="form-group col-md-6">
-                    <label for="date">Selecciona fecha de contratación:</label>
-                    <input type="date" class="form-control" name="date" id="date" value="{{ datos[9].strftime('%Y-%m-%d') }}">
-                </div>
-                <div class="form-group col-md-6">
-                    <label for="nombre_usuario">Nombre de Usuario:</label>
-                    <input type="text" class="form-control" id="nombre_usuario" name="nombre_usuario" value="{{ datos[7] }}" required>
-                </div>
-                <div class="form-group col-md-6">
-                    <label for="contraseña">Contraseña:</label>
-                    <input type="password" class="form-control" id="contraseña" name="contraseña" value="{{ datos[10] }}" required>
-                </div>
-                <div class="form-group col-md-6">
-                    <label for="imagen">Imagen:</label>
-                    <input type="file" class="form-control-file" id="imagen" name="imagen">
-                </div>
-                <div class="form-group col-md-12">
-                    <!-- Mostrar la imagen actual -->
-                    <img src="{{ url_for('static', filename=datos[12]) }}" alt="Imagen actual" style="max-width: 200px;">
-                </div>
-            </div>
-            <button type="button" type="submit" class="btn btn-primary mt-3 " onclick="Swal.fire({
+    <div class="container-fluid">
+    <h2>Edición de nombre del usuario</h2>
+    <hr class="line">
+    <br>
+    <form id="myform" action="{{ url_for('update_usuario_post', id_usuario=datos[0]) }}" method="POST" enctype="multipart/form-data">
+        <section class="label">
+            <label for="imagen">Imagen:</label>
+            <input type="file" id="imagen" name="imagen">
+            <img src="{{ url_for('static', filename=datos[12]) }}" alt="Imagen actual" style="max-width: 200px;">
+            <br><br>
+        </section>
+        <section class="label">
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" name="nombre" value="{{ datos[1] }}" required>
+            <br><br>
+            <label for="apellido_paterno">Apellido Paterno:</label>
+            <input type="text" id="apellido_paterno" name="apellido_paterno" value="{{ datos[2] }}" required>
+            <br><br>
+            <label for="apellido_materno">Apellido Materno:</label>
+            <input type="text" id="apellido_materno" name="apellido_materno" value="{{ datos[3] }}" required>
+            <br><br>
+            <label for="domicilio">Domicilio:</label>
+            <input type="text" id="domicilio" name="domicilio" value="{{ datos[4] }}" required>
+            <br><br>
+        </section>
+        <section class="label">
+            <label for="numero_telefonico">Número telefónico:</label>
+            <input type="text" id="numero_telefonico" name="numero_telefonico" value="{{ datos[5] }}" required>
+            <br><br>
+            <label for="curp">CURP:</label>
+            <input type="text" id="curp" name="curp" value="{{ datos[6] }}" required>
+            <br><br>
+            <label for="correo_electronico">Correo electrónico:</label>
+            <input type="email" id="correo_electronico" name="correo_electronico" value="{{ datos[11] }}" required>
+            <br><br>
+            <label for="tipos_de_usuario">Tipo de usuario:</label>
+            <select name="tipos_de_usuario" id="tipos_de_usuario">
+                <option value="cajero" {% if datos[8] == 'cajero' %}selected{% endif %}>Cajero</option>
+                <option value="administrador" {% if datos[8] == 'administrador' %}selected{% endif %}>Administrador</option>
+            </select>
+            <br><br>
+        </section>
+        <section class="label">
+            <label for="date">Selecciona fecha de contratación:</label>
+            <input type="date" name="date" id="date" value="{{ datos[9].strftime('%Y-%m-%d') }}">
+        </section>
+        <section class="label">
+            <label for="nombre_usuario">Nombre de Usuario:</label>
+            <input type="text" id="nombre_usuario" name="nombre_usuario" value="{{ datos[7] }}" required>
+        </section>
+        <section class="label">
+            <label for="contraseña">Contraseña:</label>
+            <input type="password" id="contraseña" name="contraseña" value="{{ datos[10] }}" required>
+        </section>
+        <button type="button" type="submit" class="btn btn-primary mt-3 " onclick="Swal.fire({
                     title: '¿Estás seguro de querer realizar este cambio?',
                     text: '¡No podrás revertir esto!',
                     icon: 'warning',
@@ -120,4 +163,3 @@
     </div>
 </body>
 </html>
-
