--- a/templates/regUsuario.html
+++ b/templates/regUsuario.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrar Usuario Gladiator's</title>
-    <link rel="stylesheet" href="/static/registrar.CSS">
-    <link rel="stylesheet" href="/static/assets/font/flaticon.css">
-    <link rel="stylesheet" href="/static/style.css">
+     <link rel="stylesheet" href="../static/registrar.CSS">
+    <link rel="stylesheet" href="../static/assets/font/flaticon.css">
+    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/style/registrar.CSS">
+    <link rel="stylesheet" href="../static/style/assets/font/flaticon.css">
+    <link rel="stylesheet" href="../static/style/style.css">
     <!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
     <!-- MODALES -->
@@ -40,77 +43,73 @@
                 <a href="index.html"><img src="../static/assets/img/Logotipo_GladiatorsTransparente.png" alt="imagen-logo"></a>
                 <h5>Gladiator's</h5>
             </section>
-            <section class="secciones">
-                <a href="./pages/index.html">Inicio</a>
-                <a href="./pages/index.html">Ventas</a>
-                <a href="./pages/index.html">Productos</a>
-                <a href="{{ url_for('registrar_usuario') }}">Usuarios</a>
-                <a href="{{ url_for('consultar_usuarios') }}">Soporte</a>
-                <a href="./pages/index.html">Cerrar Sesión</a>
+            <section>
+                <ul class="menu secciones">
+                    <li><a href="{{ url_for('secciones') }}">Inicio</a></li>
+    
+                    <li><a href="registrar_venta">Ventas</a></li>
+    
+                    <li><a href="{{ url_for('productos') }}">Productos</a>
+                    <ul>
+                        <li class="secciones"><a href="registrar_producto">Registrar</a></li>
+                        <li class="secciones"><a href="consultar_productos">Consultar</a></li>
+                    </ul>
+                    </li>
+                    {% if rol == 1 %}
+                    <li><a href="./pages/index.html">Usuarios</a>
+                    <ul>
+                        <li class="secciones"><a href="registrar_usuario">Registrar</a></li>
+                        <li class="secciones"><a href="consultar_usuarios">Consultar</a></li>
+                    </ul>
+    
+                    </li>
+                    {% endif %}
+                    <li><a href="{{ url_for('index') }}">Soporte</a></li>
+                    <li><a href="{{ url_for('index') }}">Cerrar Sesión</a></li>
+                </ul>
             </section>
         </nav>
     </header>
     <h1>Registrar Usuario</h1>
     <main>
-        <!-- <div class="container mt-5">
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                {% for category, message in messages %}
-                    <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
-                        {{ message }}
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                {% endfor %}
-            {% endif %}
-        {% endwith %} -->
-        <!-- Tu formulario de registro aquí -->
-    <!-- </div> -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-
         <form id="myform" action="{{ url_for('registrar_usuario') }}" method="POST" enctype="multipart/form-data">
-        <section class="label">
-            <label for="nombre">Nombre:</label>
-            <input type="text" id="nombre" name="nombre" required>
-            <br><br>
-            <label for="apellido_paterno">Apellido Paterno:</label>
-            <input type="text" id="apellido_paterno" name="apellido_paterno" required>
-            <br><br>
-            <label for="apellido_materno">Apellido Materno:</label>
-            <input type="text" id="apellido_materno" name="apellido_materno" required>
-            <br><br>
-            <label for="domicilio">Domicilio:</label>
-            <input type="text" id="domicilio" name="domicilio" required>
-            <br><br>
-            <label for="numero_telefonico">Número telefónico:</label>
-            <input type="text" name="numero_telefonico" maxlength="12" pattern="\d{1,12}" title="Debe contener solo dígitos y hasta 12 dígitos" required>
-            <br><br>
-            <label for="curp">CURP:</label>
-            <input type="text" id="curp" name="curp" required>
-            <br><br>
-            <label for="correo_electronico">Correo electrónico:</label>
-            <input type="email" id="correo_electronico" name="correo_electronico" required>
-            <br><br>
-            <label for="tipos_de_usuario">Tipo de usuario:</label>
-            <select name="tipos_de_usuario" id="tipos_de_usuario">
-                <option value="cajero">Cajero</option>
-                <option value="administrador">Administrador</option>
-            </select>
-            <br><br>
-            <label for="mes">Selecciona fecha de contratación:</label>
-            <input type="date" name="date" id="date">
-            <br><br>
-            <label for="nombre_usuario">Nombre de Usuario:</label>
-            <input type="text" id="nombre_usuario" name="nombre_usuario" required>
-            <br><br>
-            <label for="contraseña">Contraseña:</label>
-            <input type="password" id="contraseña" name="contraseña" required>
-            <label for="imagen">Imagen:</label>
-            <input type="file" id="imagen" name="imagen">
-            <br><br>
-        </section>
+            <div class="foto">
+                <label for="imagen">Imagen:</label>
+                <input type="file" id="imagen" name="imagen" required>
+                <img id="preview" class="preview-img" src="#" alt="Vista previa de la imagen" style="display: none;">
+            </div>
+            <div>
+            <section class="label">
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" required>
+                <label for="apellido_paterno">Apellido Paterno:</label>
+                <input type="text" id="apellido_paterno" name="apellido_paterno" required>
+                <label for="apellido_materno">Apellido Materno:</label>
+                <input type="text" id="apellido_materno" name="apellido_materno" required>
+                <label for="domicilio">Domicilio:</label>
+                <input type="text" id="domicilio" name="domicilio" required>
+                <label for="mes">Selecciona fecha de contratación:</label>
+                <input type="date" name="date" id="date">
+                <label for="contraseña">Contraseña:</label>
+                <input type="password" id="contraseña" name="contraseña" required>
+            </section>
+            </div>
+            <div>
+                <section class="label">
+                    <label for="numero_telefonico">Número telefónico:</label>
+                    <input type="text" id="numero_telefonico" name="numero_telefonico" required>
+                    <label for="curp">CURP:</label>
+                    <input type="text" id="curp" name="curp" required>
+                    <label for="correo_electronico">Correo electrónico:</label>
+                    <input type="email" id="correo_electronico" name="correo_electronico" required>
+                    <label for="tipos_de_usuario">Tipo de usuario:</label>
+                    <select name="tipos_de_usuario" id="tipos_de_usuario">
+                        <option value="cajero">Cajero</option>
+                        <option value="administrador">Administrador</option>
+                    </select>
+                    <label for="nombre_usuario">Nombre de Usuario:</label>
+                    <input type="text" id="nombre_usuario" name="nombre_usuario" required>
+                </section>
         <!-- <button type="submit">Registrar</button> -->
          <button type="button" type="submit" class="btn btn-primary mt-3 " onclick="Swal.fire({
                     title: '¿Estás seguro de querer realizar este cambio?',
@@ -130,7 +129,7 @@
                     document.getElementById('myform').submit();
                     });
                     }
-                    })">Actualizar</button>
+                    })">Registrar</button>
     </form>
     </main>
 </body>
